# AIASK

./: .env.example  .gitignore  .pre-commit-config.yaml  MCP_Test_Report_Complete.md  OPTIMIZATION_SCHEME.md  OPTIMIZATION_SCHEME_ANALYSIS.md  README.md  mypy.ini  packag  pyproject.toml  start_backend.sh  start_frontend.sh  修复后数据质量验证报告.md
.claude/: DATA_AUDIT_REPORT.md  OPTIMIZATION_SCHEME_ANALYSIS.md  context-summary-mcp-review.md  operations-log.md  quantitative-optimization-plan.md  settings.local.json
.kiro/settings/: mcp.json
.mcp_cache/: financials_000001.json  financials_000002.json  financials_000333.json  financials_000858.json  financials_002594.json  financials_300059.json  financials_300750.json  financials_600000.json  financials_600036.json  financials_600519.json  financials_600887.json  financials_601318.json  financials_601398.json  financials_688981.json
data/: financial_import_progress.json  import_progress.json
docs/: RESTRUCTURE_REPORT.md  SECURITY_AUDIT.md  USER_EXPERIENCE_AUDIT.md  structure-fixes.md  verification-report.md  专业炒股软件界面设计方案.md  功能使用手册.md  常见问题FAQ.md  投资术语词典.md  用户快速入门.md  风险提示说明.md
reports/: akshare_mcp_tool_inventory.json  mcp-interface-record.md  mcp-issue-report.md  mcp_tool_inventory.json  股票MCP工具测试报告.md  股票MCP工具真实测试报告.md
scripts/: download_factor_data.py  fix-implicit-any.js  test_realtime_api.py  test_service.py
tests/integration/: test_p1_integration.py
tests/unit/: test_akshare_sector_functions.py  test_backtest.py  test_call_auction.py  test_data_layer.py  test_financial_fix.py  test_financial_function.py  (+10 more)
(+16 files in other folders)
